# CMakeTemplate

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  build.sh  conanfile.txt
.github/workflows/: example-1.yml  mirror.yml  ubuntu-22.04.yml
bench/: CMakeLists.txt
bench/cstyle/: CMakeLists.txt  main.cpp
bench/iter/: CMakeLists.txt  main.cpp
cmake/: BuildDependency.cmake  CheckOMPCompiles.cmake  CompilerFlags.cmake  DeprecationWarnings.cmake  Fetch_Eigen3.cmake  Fetch_fmt.cmake  Fetch_h5pp.cmake  FindEigen3.cmake  FindOpenMP.cmake  FindPackageOpenMP.cmake  Findspdlog.cmake  GetNumThreads.cmake  Get_Eigen3.cmake  Get_h5pp.cmake  PrintHostInfo.cmake  PrintOptionInfo.cmake  PrintTargetInfo.cmake  SetupDependenciesCMake.cmake  SetupDependenciesConan.cmake  SetupDependenciesFetch.cmake  SetupDependenciesFind.cmake  SetupDependenciesNative.cmake  SetupSearchPaths.cmake  TargetFilters.cmake  gitversion.cmake  gitversion.h.in
cmake-modules/: BuildDependency.cmake  BuildExternalLibs.cmake  BuildThirdParty.cmake  CheckCXX17Compiles.cmake  CheckExperimentalHeaders.cmake  CheckOMPCompiles.cmake  Fetch_Eigen3.cmake  Fetch_HDF5.cmake  Fetch_h5pp.cmake  Fetch_spdlog.cmake  FindEigen3.cmake  FindPackageHDF5.cmake  FindPackageOpenMP.cmake  PrintTargetInfo.cmake  TargetEnableWarnings.cmake  UserMakeRulesOverride.cxx.cmake  getExpandedTarget.cmake
cmake-modules/external_Eigen3/: CMakeLists.txt
cmake-modules/external_h5pp/: CMakeLists.txt
cmake/conan/: conan_support.cmake
cmake/external_Eigen3/: CMakeLists.txt
cmake/external_h5pp/: CMakeLists.txt
conan-modules/: conanfile.txt
examples/: CMakeLists.txt
examples/01A-helloworld/: CMakeLists.txt  main.cpp
examples/01B-function-signatures/: CMakeLists.txt  main.cpp
examples/02A-linear-algebra/: CMakeLists.txt  main.cpp
examples/03A-random-numbers-omg/: CMakeLists.txt  main.cpp
examples/03B-random-numbers-bad/: CMakeLists.txt  main.cpp
examples/03C-random-numbers-meh/: CMakeLists.txt  main.cpp
examples/03D-random-numbers-huh/: CMakeLists.txt  main.cpp
examples/03E-random-numbers-wow/: CMakeLists.txt  main.cpp  rnd.cpp
examples/04A-h5pp-read-write-vector/: CMakeLists.txt  main.cpp
examples/04B-h5pp-read-write-eigen/: CMakeLists.txt  main.cpp
examples/05A-templates/: CMakeLists.txt  main.cpp
examples/05B-concepts/: CMakeLists.txt  concepts.h  main.cpp
examples/06A-simulation/: CMakeLists.txt  cli.cpp
examples/07A-compilation-bash/: .gitignore  compile.sh
examples/07A-compilation-bash/source/: cli.cpp
examples/07B-compilation-cmake/: CMakeLists.txt  CMakePresets.json  conanfile.txt
examples/07B-compilation-cmake/source/: cli.cpp  log.h  main.cpp  settings.h
examples/08A-subsystems/: CMakeLists.txt  cli.cpp  main.cpp  rnd.h
examples/09A-raii/: CMakeLists.txt  main.cpp
examples/10A-mpi/: CMakeLists.txt  main.cpp
examples/10A-mpi-helloworld/: CMakeLists.txt  main.cpp
examples/10B-mpi/: CMakeLists.txt  main.cpp  settings.h
examples/10B-mpi-bcast/: CMakeLists.txt  main.cpp
examples/10B-mpi-bcast/general/: iter.h
examples/10B-mpi-bcast/math/: cast.h  num.h
examples/10B-mpi-bcast/mpi/: mpi-tools.cpp  mpi-tools.h
examples/10B-mpi/general/: sfinae.h
examples/10C-mpi-wrap/: CMakeLists.txt  cli.cpp  cli.h  log.h  main.cpp
examples/10C-mpi-wrap/mpi/: mpi-tools.cpp  mpi-tools.h
source/: main.cpp
tests/: CMakeLists.txt  all-tests.cmake  test-eigen.cpp  test-h5pp.cpp  test-openmp.cpp
tests/eigen3/: CMakeLists.txt  main.cpp
tests/h5pp/: CMakeLists.txt
tests/openmp/: CMakeLists.txt  main.cpp
tests/spdlog/: CMakeLists.txt  logger.cpp  logger.h  main.cpp
toolchains/: linux-x86_64-clang-libstdc++.cmake
