if(CMT_BUILD_EXAMPLES)
    cmake_minimum_required(VERSION 3.24)
    message(STATUS "Build examples ON")
    add_subdirectory(01A-helloworld)
    add_subdirectory(01B-function-signatures)
    add_subdirectory(02A-linear-algebra)
    add_subdirectory(03A-random-numbers-omg)
    add_subdirectory(03B-random-numbers-bad)
    add_subdirectory(03C-random-numbers-meh)
    add_subdirectory(03D-random-numbers-huh)
    add_subdirectory(03E-random-numbers-wow)
    add_subdirectory(04A-h5pp-read-write-vector)
    add_subdirectory(04B-h5pp-read-write-eigen)
    add_subdirectory(05A-templates)
    add_subdirectory(05B-concepts)
    add_subdirectory(06A-simulation)
    add_subdirectory(08A-subsystems)
    add_subdirectory(09A-raii)
    add_subdirectory(10A-mpi-helloworld)
    add_subdirectory(10B-mpi-bcast)
    add_subdirectory(10C-mpi-wrap)
endif()
